--- a/style/styles.css
+++ b/style/styles.css
@@ -65,7 +65,7 @@ main {
 }
 
 main .text1 h2 {
-    margin-top: 25px;
+    /* margin-top: 25px; */
     padding: 10px 20px;
     font-size: 40px;
     font-family: "Pacifico", cursive;
